more descriptive humus-balance class names

--- a/crop-planner/src/stylesheets/components/table.scss
+++ b/crop-planner/src/stylesheets/components/table.scss
@@ -45,11 +45,11 @@
     border-right: none;
   }
 
-  &.better-humus {
+  &.better-humus-balance {
     color: green;
   }
 
-  &.worse-humus {
+  &.worse-humus-balance {
     color: red;
   }
 }
