Add visual styles for humus_balance

--- a/crop-planner/src/stylesheets/components/table.scss
+++ b/crop-planner/src/stylesheets/components/table.scss
@@ -56,6 +56,14 @@
   text-align: right;
 }
 
+.table__cell--positive {
+  color: $light-green;
+}
+
+.table__cell--negative {
+  color: $light-red;
+}
+
 .table__cell--with-select {
   padding: 2px 12px;
 }
