Add humus balance component

--- a/crop-planner/src/stylesheets/components/table.scss
+++ b/crop-planner/src/stylesheets/components/table.scss
@@ -44,6 +44,14 @@
   &:last-child {
     border-right: none;
   }
+
+  &.increased-field-quality {
+    color: green;
+  }
+
+  &.decreased-field-quality {
+    color: red;
+  }
 }
 
 .table__cell--center {
